manifests/workloads/network-daemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-daemon-spooler
  namespace: default
spec:
  replicas: 40
  selector:
    matchLabels:
      app: network-daemon
  template:
    metadata:
      labels:
        app: network-daemon
    spec:
      containers:
      - name: pause
        image: registry.k8s.io/pause:3.9
        resources:
          requests:
            cpu: "10m"
            memory: "16Mi"
