manifests/workloads/payment-processor.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-payments
  labels:
    cost-center: "finops-payments-101"
    owner: "payments-team"
    pod-security.kubernetes.io/enforce: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-processor
  namespace: prod-payments
  labels:
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-processor
  template:
    metadata:
      labels:
        app: payment-processor
    spec:
      containers:
        - name: app
          image: gcr.io/google-samples/gb-frontend:v5
          command: ["/bin/sh", "-c"]
          args:
            - |
              if [ -z "$DATABASE_URL" ]; then
                echo "FATAL: Mandatory environment variable DATABASE_URL is missing!"
                exit 1
              fi
              echo "Starting payment service..."
