manifests/workloads/stateful-postgres-db.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-databases
  labels:
    cost-center: "finops-db-505"
    owner: "data-infra-team"
    pod-security.kubernetes.io/enforce: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateful-postgres-db
  namespace: prod-databases
  labels:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful-db
  template:
    metadata:
      labels:
        app: stateful-db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: postgres-data-pvc
