manifests/workloads/ha-payment-gateway-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-payments
  labels:
    cost-center: "finops-payments-101"
    owner: "payments-team"
    pod-security.kubernetes.io/enforce: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-session-worker
  namespace: prod-payments
  labels:
spec:
  replicas: 35
  selector:
    matchLabels:
      app: payment-session-worker
  template:
    metadata:
      labels:
        app: payment-session-worker
    spec:
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.9
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-payment-gateway
  namespace: prod-payments
  labels:
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ha-payment-gateway
  template:
    metadata:
      labels:
        app: ha-payment-gateway
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ha-payment-gateway
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: gateway
          image: nginx:latest
          resources:
            requests:
              cpu: "4"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "4Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-ilb-service
  namespace: prod-payments
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: ha-payment-gateway
